--- a/SI-Penjuru2/public/css/responsive.css
+++ b/SI-Penjuru2/public/css/responsive.css
@@ -16,6 +16,9 @@
     .footer-content{
         margin-top: 0px !important;
     }
+    .halaman{
+        margin-left:450px !important;
+    }
  }
 
 
